# zurich-house-hunter

./: .gitignore  README.md  config.example.json  hunter.py  pyproject.toml
.github/workflows/: deploy.yml
deploy/: deploy_to_server.sh  zurich-house-hunter.service
deploy/google_sheet_webhook/: Code.gs
src/zurich_house_hunter/: bot.py  cli.py  config.py  extractors.py  filters.py  geo.py  google_sheet.py  html_tools.py  http.py  imap_alerts.py  logging_utils.py  models.py  service.py  state.py  telegram.py
tests/: test_bot.py  test_extractors.py  test_filters.py  test_geo.py  test_google_sheet.py  test_imap_alerts.py  test_state.py  test_telegram.py
