[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zurich-house-hunter"
version = "0.1.0"
description = "Config-driven Zurich housing scraper with Telegram notifications"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "OpenAI Codex" }]

[project.scripts]
zurich-house-hunter = "zurich_house_hunter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
